generator client {
  provider = "prisma-client-js"
  output   = "../app/generated/prisma"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                        String                            @id @default(uuid()) @db.Uuid
  discordId                 String                            @unique @map("discord_id")
  discordUsername           String                            @map("discord_username")
  discordDisplayName        String?                           @map("discord_display_name")
  avatarUrl                 String?                           @map("avatar_url")
  isActive                  Boolean                           @default(true) @map("is_active")
  lastLoginAt               DateTime?                         @map("last_login_at") @db.Timestamptz(6)
  createdAt                 DateTime                          @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt                 DateTime                          @updatedAt @map("updated_at") @db.Timestamptz(6)
  email                     String?                           @unique
  emailVerified             DateTime?                         @map("email_verified")
  image                     String?
  name                      String?
  accounts                  Account[]
  auditLogs                 AuditLog[]
  listingAudits             MarketplaceListingAuditLog[]
  marketplaceListings       MarketplaceListings[]
  suspendedMarketplaceUsers MarketplaceUserStatus[]           @relation("SuspendedBy")
  marketplaceStatus         MarketplaceUserStatus?
  profileApprovalHistory    MercenaryProfileApprovalHistory[]
  approvedProfiles          MercenaryProfile[]                @relation("ApprovedBy")
  rejectedProfiles          MercenaryProfile[]                @relation("RejectedBy")
  mercenaryProfiles         MercenaryProfile[]                @relation("UserProfiles")
  notifications             notifications[]
  sessions                  Session[]
  roles                     UserRole[]

  @@map("users")
}

model Account {
  id                String  @id @default(uuid()) @db.Uuid
  userId            String  @map("user_id") @db.Uuid
  type              String
  provider          String
  providerAccountId String  @map("provider_account_id")
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?
  user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@map("accounts")
}

model Session {
  id           String   @id @default(uuid()) @db.Uuid
  sessionToken String   @unique @map("session_token")
  userId       String   @map("user_id") @db.Uuid
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("sessions")
}

model VerificationToken {
  identifier String
  token      String
  expires    DateTime

  @@unique([identifier, token])
  @@map("verification_tokens")
}

model DiscordRole {
  id                      String                   @id @map("id")
  name                    String
  color                   Int?
  position                Int?
  isManaged               Boolean                  @default(false) @map("is_managed")
  isActive                Boolean                  @default(true) @map("is_active")
  createdAt               DateTime                 @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt               DateTime                 @updatedAt @map("updated_at") @db.Timestamptz(6)
  divisionAllowedRoles    DivisionAllowedRole[]
  permissions             RolePermission[]
  subdivisionAllowedRoles SubdivisionAllowedRole[]
  users                   UserRole[]

  @@map("discord_roles")
}

model UserRole {
  userId        String      @map("user_id") @db.Uuid
  discordRoleId String      @map("discord_role_id")
  assignedAt    DateTime    @default(now()) @map("assigned_at") @db.Timestamptz(6)
  discordRole   DiscordRole @relation(fields: [discordRoleId], references: [id], onDelete: Cascade)
  user          User        @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([userId, discordRoleId])
  @@map("user_roles")
}

model Permission {
  id          Int              @id @default(autoincrement())
  key         String           @unique
  description String
  roles       RolePermission[]

  @@map("permissions")
}

model RolePermission {
  discordRoleId String      @map("discord_role_id")
  permissionId  Int         @map("permission_id")
  discordRole   DiscordRole @relation(fields: [discordRoleId], references: [id], onDelete: Cascade)
  permission    Permission  @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@id([discordRoleId, permissionId])
  @@map("role_permissions")
}

model Division {
  id                Int                   @id @default(autoincrement())
  name              String
  slug              String                @unique
  description       String
  iconUrl           String?               @map("icon_url")
  isActive          Boolean               @default(true) @map("is_active")
  sortOrder         Int                   @default(0) @map("sort_order")
  createdAt         DateTime              @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt         DateTime              @updatedAt @map("updated_at") @db.Timestamptz(6)
  allowedRoles      DivisionAllowedRole[]
  mercenaryProfiles MercenaryProfile[]
  subdivisions      Subdivision[]

  @@map("divisions")
}

model Subdivision {
  id                Int                      @id @default(autoincrement())
  divisionId        Int                      @map("division_id")
  name              String
  slug              String                   @unique
  description       String
  isActive          Boolean                  @default(true) @map("is_active")
  sortOrder         Int                      @default(0) @map("sort_order")
  createdAt         DateTime                 @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt         DateTime                 @updatedAt @map("updated_at") @db.Timestamptz(6)
  mercenaryProfiles MercenaryProfile[]
  allowedRoles      SubdivisionAllowedRole[]
  division          Division                 @relation(fields: [divisionId], references: [id], onDelete: Cascade)

  @@map("subdivisions")
}

model Rank {
  id                Int                @id @default(autoincrement())
  name              String
  slug              String             @unique
  sortOrder         Int                @default(0) @map("sort_order")
  isLeadershipCore  Boolean            @default(false) @map("is_leadership_core")
  isOfficerCore     Boolean            @default(false) @map("is_officer_core")
  createdAt         DateTime           @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt         DateTime           @updatedAt @map("updated_at") @db.Timestamptz(6)
  mercenaryProfiles MercenaryProfile[]

  @@map("ranks")
}

model DivisionAllowedRole {
  divisionId    Int         @map("division_id")
  discordRoleId String      @map("discord_role_id")
  discordRole   DiscordRole @relation(fields: [discordRoleId], references: [id], onDelete: Cascade)
  division      Division    @relation(fields: [divisionId], references: [id], onDelete: Cascade)

  @@id([divisionId, discordRoleId])
  @@map("division_allowed_roles")
}

model SubdivisionAllowedRole {
  subdivisionId Int         @map("subdivision_id")
  discordRoleId String      @map("discord_role_id")
  discordRole   DiscordRole @relation(fields: [discordRoleId], references: [id], onDelete: Cascade)
  subdivision   Subdivision @relation(fields: [subdivisionId], references: [id], onDelete: Cascade)

  @@id([subdivisionId, discordRoleId])
  @@map("subdivision_allowed_roles")
}

model MercenaryProfile {
  id              String                            @id @default(uuid()) @db.Uuid
  userId          String                            @map("user_id") @db.Uuid
  characterName   String                            @map("character_name")
  rankId          Int?                              @map("rank_id")
  divisionId      Int                               @map("division_id")
  subdivisionId   Int?                              @map("subdivision_id")
  portraitUrl     String?                           @map("portrait_url")
  bio             String
  status          String
  isPublic        Boolean                           @default(true) @map("is_public")
  lastSubmittedAt DateTime?                         @map("last_submitted_at") @db.Timestamptz(6)
  approvedAt      DateTime?                         @map("approved_at") @db.Timestamptz(6)
  approvedBy      String?                           @map("approved_by") @db.Uuid
  rejectedAt      DateTime?                         @map("rejected_at") @db.Timestamptz(6)
  rejectedBy      String?                           @map("rejected_by") @db.Uuid
  rejectionReason String?                           @map("rejection_reason")
  createdAt       DateTime                          @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt       DateTime                          @updatedAt @map("updated_at") @db.Timestamptz(6)
  call_sign       String?
  approvalHistory MercenaryProfileApprovalHistory[]
  approver        User?                             @relation("ApprovedBy", fields: [approvedBy], references: [id])
  division        Division                          @relation(fields: [divisionId], references: [id])
  rank            Rank?                             @relation(fields: [rankId], references: [id])
  rejecter        User?                             @relation("RejectedBy", fields: [rejectedBy], references: [id])
  subdivision     Subdivision?                      @relation(fields: [subdivisionId], references: [id])
  user            User                              @relation("UserProfiles", fields: [userId], references: [id], onDelete: Cascade)

  @@map("mercenary_profiles")
}

model MercenaryProfileApprovalHistory {
  id        Int              @id @default(autoincrement())
  profileId String           @map("profile_id") @db.Uuid
  action    String
  actorId   String           @map("actor_id") @db.Uuid
  reason    String?
  createdAt DateTime         @default(now()) @map("created_at") @db.Timestamptz(6)
  actor     User             @relation(fields: [actorId], references: [id])
  profile   MercenaryProfile @relation(fields: [profileId], references: [id], onDelete: Cascade)

  @@map("mercenary_profile_approval_history")
}

model MarketplaceCategory {
  id          Int                   @id @default(autoincrement())
  name        String
  slug        String                @unique
  description String?
  parentId    Int?                  @map("parent_id")
  isActive    Boolean               @default(true) @map("is_active")
  sortOrder   Int                   @default(0) @map("sort_order")
  createdAt   DateTime              @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt   DateTime              @updatedAt @map("updated_at") @db.Timestamptz(6)
  parent      MarketplaceCategory?  @relation("CategoryHierarchy", fields: [parentId], references: [id])
  children    MarketplaceCategory[] @relation("CategoryHierarchy")
  listings    MarketplaceListings[]

  @@map("marketplace_categories")
}

model MarketplaceListings {
  id               String                       @id @default(uuid()) @db.Uuid
  sellerUserId     String                       @map("seller_user_id") @db.Uuid
  title            String
  description      String
  categoryId       Int                          @map("category_id")
  price            Decimal                      @db.Decimal(12, 2)
  currency         String
  quantity         Int                          @default(1)
  condition        String?
  status           String
  discordThreadId  String?                      @map("discord_thread_id")
  discordChannelId String?                      @map("discord_channel_id")
  expiresAt        DateTime?                    @map("expires_at") @db.Timestamptz(6)
  metadata         Json?
  createdAt        DateTime                     @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt        DateTime                     @updatedAt @map("updated_at") @db.Timestamptz(6)
  deletedAt        DateTime?                    @map("deleted_at") @db.Timestamptz(6)
  visibility       String                       @default("PUBLIC")
  location         String?
  view_count       Int                          @default(0)
  message_count    Int                          @default(0)
  external_id      String?
  external_source  String?
  external_data    Json?
  published_at     DateTime?                    @db.Timestamptz(6)
  archived_at      DateTime?                    @db.Timestamptz(6)
  audits           MarketplaceListingAuditLog[]
  images           MarketplaceListingImage[]
  category         MarketplaceCategory          @relation(fields: [categoryId], references: [id])
  seller           User                         @relation(fields: [sellerUserId], references: [id], onDelete: Cascade)

  @@map("marketplace_listings")
}

model MarketplaceListingImage {
  id        Int                 @id @default(autoincrement())
  listingId String              @map("listing_id") @db.Uuid
  imageUrl  String              @map("image_url")
  sortOrder Int                 @default(0) @map("sort_order")
  createdAt DateTime            @default(now()) @map("created_at") @db.Timestamptz(6)
  listing   MarketplaceListings @relation(fields: [listingId], references: [id], onDelete: Cascade)

  @@map("marketplace_listing_images")
}

model MarketplaceUserStatus {
  userId      String    @id @map("user_id") @db.Uuid
  isSuspended Boolean   @default(false) @map("is_suspended")
  reason      String?
  suspendedBy String?   @map("suspended_by") @db.Uuid
  suspendedAt DateTime? @map("suspended_at") @db.Timestamptz(6)
  endsAt      DateTime? @map("ends_at") @db.Timestamptz(6)
  createdAt   DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt   DateTime  @updatedAt @map("updated_at") @db.Timestamptz(6)
  suspender   User?     @relation("SuspendedBy", fields: [suspendedBy], references: [id])
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("marketplace_user_status")
}

model MarketplaceListingAuditLog {
  id        Int                 @id @default(autoincrement())
  listingId String              @map("listing_id") @db.Uuid
  actorId   String?             @map("actor_id") @db.Uuid
  action    String
  oldValues Json?               @map("old_values")
  newValues Json?               @map("new_values")
  createdAt DateTime            @default(now()) @map("created_at") @db.Timestamptz(6)
  actor     User?               @relation(fields: [actorId], references: [id])
  listing   MarketplaceListings @relation(fields: [listingId], references: [id], onDelete: Cascade)

  @@map("marketplace_listing_audit_log")
}

model AuditLog {
  id         Int      @id @default(autoincrement())
  actorId    String?  @map("actor_id") @db.Uuid
  action     String
  targetType String   @map("target_type")
  targetId   String   @map("target_id")
  metadata   Json?
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  actor      User?    @relation(fields: [actorId], references: [id])

  @@map("audit_logs")
}

model SiteSetting {
  key   String @id
  value Json

  @@map("site_settings")
}

model notifications {
  id         String                 @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  user_id    String                 @db.Uuid
  type       notification_type_enum
  title      String?
  message    String?
  link_url   String?
  is_read    Boolean                @default(false)
  read_at    DateTime?              @db.Timestamptz(6)
  created_at DateTime               @default(now()) @db.Timestamptz(6)
  users      User                   @relation(fields: [user_id], references: [id], onDelete: Cascade, onUpdate: NoAction)
}

enum notification_type_enum {
  PROFILE_APPROVED
  PROFILE_REJECTED
  LISTING_UPDATE
  LISTING_SOLD
  SUSPENSION
  SYSTEM
}
